fix: adjust translation of artist heading for better alignment

--- a/src/index.css
+++ b/src/index.css
@@ -574,7 +574,7 @@ p{
   .artist_heading{
     font-size: 2rem;
     font-weight: bolder;
-    transform: translateX(-6rem)translateY(13rem);
+    transform: translateX(-5rem)translateY(13rem);
   }
   .singer_info{
     font-size: 1rem;
